--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/chicken_adobo.html">Chicken Adobo with Pineapple</a>
+    <ul>
+        <li><a href="./recipes/chicken_adobo.html">Chicken Adobo with Pineapple</a></li>
+    </ul>
 </body>
 </html>
